--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"vite": "^7.2.2"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/adapter-static": "^3.0.10",
 		"undici": "^7.16.0"
 	}
